end of final exam

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">FA_OnurcanSever_C0830345_android</string>
+    <string name="favorites">Favorites</string>
+    <string name="delete">Delete</string>
 </resources>
